# zeroday

./: .env.example  .gitignore  DEEPHAT_FEATURES.md  README.md  pyproject.toml  requirements.txt
configs/: deephat_model.yml
my_reports/: vuln_report_20250922_223412.html  vuln_report_20250922_223412.json  vuln_report_20250922_223412.txt  vuln_report_20250922_223728.html  vuln_report_20250922_223728.json  vuln_report_20250922_223728.txt  vuln_report_20250922_224856.html  vuln_report_20250922_224856.json  vuln_report_20250922_224856.txt
scripts/: run_analysis.py
zeroday/: __init__.py
zeroday/agents/: __init__.py  base_agent.py  deephat_security_agent.py  orchestration_agent.py  python_analysis_agent.py  repo_ingestion_agent.py  report_generation_agent.py
zeroday/tools/: __init__.py  deephat_interface.py  git_operations.py
zeroday/workflows/: __init__.py  vulnerability_detection_workflow.py
